# cookiecutter-python

./: .gitignore  README.md  cookiecutter.json  pytest.ini
.github/workflows/: cookiecutter-e2e.yml
hooks/: post_gen_project.py  pre_gen_project.py
tests/end2end/: test_cookiecutter_e2e.py
{{ cookiecutter.project_slug }}/: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SKILLS.md  agent.md  plan.md  pyproject.toml  ruff.toml
{{ cookiecutter.project_slug }}/.github/ISSUE_TEMPLATE/: config.yml
{{ cookiecutter.project_slug }}/.github/workflows/: ci.yml  release.yml
{{ cookiecutter.project_slug }}/docs/: README.md
{{ cookiecutter.project_slug }}/skills/architecture/: SKILL.md
{{ cookiecutter.project_slug }}/skills/code-style/: SKILL.md
{{ cookiecutter.project_slug }}/skills/release/: SKILL.md
{{ cookiecutter.project_slug }}/skills/review-followup/: SKILL.md
{{ cookiecutter.project_slug }}/skills/testing/: SKILL.md
{{ cookiecutter.project_slug }}/skills/tooling/: SKILL.md
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.package_name }}/: __init__.py  async_runner.py  cli.py  exceptions.py  logging.py  settings.py
{{ cookiecutter.project_slug }}/tests/end2end/: test_cli_help.py
{{ cookiecutter.project_slug }}/tests/integration/: test_imports.py
{{ cookiecutter.project_slug }}/tests/unit/: test_async_runner.py  test_cli.py  test_exceptions.py  test_logging.py  test_settings.py  test_version.py
