[project]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
authors = [{ name = "{{ cookiecutter.author_full_name }}", email = "{{ cookiecutter.author_email }}" }]
license = { text = "{{ cookiecutter.license }}" }
keywords = ["python", "package", "cli", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: {{ cookiecutter.python_version }}"
]
dependencies = [
  "pydantic>=2.12.0",
  "pydantic-settings>=2.12.0",
  "python-dotenv>=1.1.0",
  "structlog>=25.5.0"
]

[dependency-groups]
dev = [
  "build>=1.3.0",
  "twine>=6.2.0",
  "detect-secrets>=1.5.0",
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "pytest-mock>=3.15.1",
  "ruff>=0.15.0",
  "ty>=0.0.15"
]

[project.urls]
Homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
Repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
Issues = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/issues"

[project.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.package_name }}.cli:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/{{ cookiecutter.package_name }}"]

[tool.hatch.build.targets.sdist]
include = ["src/{{ cookiecutter.package_name }}", "README.md", "pyproject.toml", "LICENSE"]

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
addopts = "-ra -q -m unit --strict-markers --cov=src --cov-report=term-missing:skip-covered --cov-report=html"
pythonpath = ["src"]
markers = [
  "unit: mark a test as a unit test.",
  "integration: mark a test as an integration test.",
  "end2end: mark a test as an end-to-end test."
]

[tool.coverage.run]
branch = true
source = ["src/{{ cookiecutter.package_name }}"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 2
fail_under = {{ cookiecutter.minimum_coverage }}

[tool.coverage.html]
directory = "htmlcov"
title = "{{ cookiecutter.project_name }} coverage"
